<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/red1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red1c"
            android:inputType="number"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/red2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red2"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red3"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red4"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red5"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/green1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/green1"
            android:inputType="number"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/green2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/green2"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linear1"
        android:layout_margin="20dp"
        android:hint="@string/date"
        android:maxLength="5"
        android:inputType="number" />

    <EditText
        android:id="@+id/times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linear1"
        android:layout_margin="20dp"
        android:hint="@string/times"
        android:inputType="number"
        android:maxLength="2" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:onClick="saveDaLeTou"
        android:text="@string/save" />

</RelativeLayout>