<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="number"
            android:maxLength="5" />

        <EditText
            android:id="@+id/red1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red1c"
            android:inputType="number"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/red2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red2"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red3"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red4"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/red5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/red5"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/green1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/green1"
            android:inputType="number"
            android:maxLength="2"
            />

        <EditText
            android:id="@+id/green2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/green2"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />


</LinearLayout>