<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:id="@+id/item_liner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/date"
                android:id="@+id/date"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/red1c"
                android:layout_weight="1"
                android:id="@+id/red1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/red2"
                android:layout_weight="1"
                android:id="@+id/red2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/red3"
                android:layout_weight="1"
                android:id="@+id/red3"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/red4"
                android:layout_weight="1"
                android:id="@+id/red4"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/red5"
                android:layout_weight="1"
                android:id="@+id/red5"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/green1"
                android:layout_weight="1"
                android:id="@+id/green1"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/green2"
                android:layout_weight="1"
                android:id="@+id/green2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/times"
                android:layout_weight="1"
                android:id="@+id/times"
                android:gravity="center" />

</LinearLayout>