<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_over"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/text_title"
        android:textColor="@color/gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text"
        android:layout_marginLeft="2dp"
        android:text="@string/maohao"
        android:textSize="@dimen/text_title"
        android:textColor="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_mydaletou"
        android:layout_toRightOf="@id/text"
        android:layout_marginLeft="8dp"
        android:hint="@string/date"
        android:textSize="@dimen/text_title"
        android:textColor="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/mydaletou_linearLayout"
        android:background="@color/lightpink"
        android:layout_below="@id/text">

        <include
            android:id="@+id/mydaletou_layout"
            layout="@layout/item_mydaletou"
            ></include>

    </LinearLayout>


    <include
        android:id="@+id/header_recycle"
        layout="@layout/header_daletou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mydaletou_linearLayout"
        android:layout_marginTop="5dp"></include>

    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/recycle_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_recycle">

    </com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView>


</RelativeLayout>
